# PROG2_G2

./: README.md
PROG2_TrabalhoFinalG2/: CMakeLists.txt  batalha.c  main.c  missoes.c  monstros.c  personagens.c
PROG2_TrabalhoFinalG2/bibliotecas/: batalha.h  estruturasDados.h  missoes.h  monstros.h  personagens.h
